# bank-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
aes/: aes.cpp
core/: main.cpp
core/page/: login.cpp
logger/: enabled.h  logger.cpp  logger.h
report/: .gitignore  report.tex
src/: main.cpp
src/aes/: GFMul.cpp  GFMul.h  aes.cpp  aes.h
src/aes/cpp/: GFMul.cpp  aes.cpp  aes_io.cpp  aes_user.cpp
src/aes/header/: GFMul.h  aes.h  aes_io.h  aes_user.h
src/big/: BigIntTiny.h
src/core/: main.cpp  util.h
src/core/data/: Customer.cpp  Customer.h  Database.cpp  Database.h  Staff.cpp  Staff.h  Transaction.cpp  Transaction.h
src/core/data/struct/: graph.h  linkedlist.h
src/core/page/: bank_map.cpp  bank_map.h  bank_queue.cpp  bank_queue.h  cash_reception.cpp  cash_reception.h  custom_account.cpp  custom_account.h  login.cpp  login.h  meun.cpp  meun.h  staff_manager.cpp  staff_manager.h  transaction_query.cpp  transaction_query.h
src/glob/: wildcard.hpp
src/logger/: enabled.h  logger.cpp  logger.h
src/tui/: Color.cpp  Context.h  Coord.cpp  Coord.h  Keycode.cpp  Keycode.h  Term.cpp  Term.h  Widget.h  core.cpp
src/tui/dialog/: msgbox.h
src/tui/widget/: AttrFill.h  BasicText.h  BasicTextButton.h  Box.cpp  Box.h  Center.cpp  Checkbox.cpp  Checkbox.h  Container.cpp  Container.h  HCenter.cpp  HListView.cpp  HListView.h  Padding.cpp  Padding.h  Struct.cpp  Switch.h  Table.h  TableBuilder.h  TextField.cpp  TextField.h  VListView.cpp  VListView.h  Visible.h  Widget.cpp  Widget.h
src/xmarco/: memoryUtil.h  xmarco.h
tests/: aes_error.inc  test_aes.cpp  test_ase.cpp  test_gtest.cpp  test_io.cpp  test_linkedlist.cpp  test_wildcard.cpp
tui/: CMakeLists.txt  Canvas.cpp  Canvas.h  Color.cpp  Color.h  Context.cpp  Context.h  Coord.cpp  Coord.h  Keycode.cpp  Keycode.h  Term.cpp  Term.h  Widget.h  color.cpp  color.h  core.cpp  core.h  term_attr.cpp  term_attr.h  widget.cpp  widget.h
tui/dialog/: msgbox.h
tui/src/: biarray.h  color.cpp  color.h  frame.cpp  frame.h  scene.cpp  scene.h
tui/widget/: AttrFill.cpp  AttrFill.h  BasicText.cpp  BasicText.h  Box.cpp  Box.h  Button.cpp  Button.h  Center.h  Container.cpp  Container.h  HCenter.cpp  HCenter.h  HListView.cpp  ListView.cpp  ListView.h  Struct.h  Text.cpp  Text.h  TextField.cpp  TextField.h  VCenter.cpp  VCenter.h  VListView.cpp  VListView.h  Visible.cpp  Widget.cpp  Widget.h
